--- a/MockTraceAgent.Cli/MockTraceAgent.Cli.csproj
+++ b/MockTraceAgent.Cli/MockTraceAgent.Cli.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="MockTraceAgent.Core/MockTraceAgent.Core.csproj" />
+    <ProjectReference Include="../MockTraceAgent.Core/MockTraceAgent.Core.csproj" />
   </ItemGroup>
 
 </Project>
