--- a/Datadog.Apm.TracerPayloadInspector.NuGet/Datadog.Apm.TracerPayloadInspector.NuGet.csproj
+++ b/Datadog.Apm.TracerPayloadInspector.NuGet/Datadog.Apm.TracerPayloadInspector.NuGet.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
